# equiadapt

./: .coveragerc  .gitignore  .isort.cfg  .mypy.ini  .pre-commit-config.yaml  .readthedocs.yml  AUTHORS.md  CHANGELOG.md  CONTRIBUTING.md  LICENSE  README.md  conda_env.yaml  min_conda_env.yaml  pyproject.toml  setup.cfg  setup.py  tox.ini
.github/: pull_request_template.md
.github/workflows/: ci.yml
docs/: Makefile  conf.py  index.md  postprocess.py  requirements.txt
equiadapt/: __init__.py
equiadapt/common/: __init__.py  basecanonicalization.py  basewrapper.py  discretecanonicalization.py  utils.py
equiadapt/images/: __init__.py  canonicalization.py  equiwrapper.py  utils.py
equiadapt/images/canonicalization/: __init__.py  continuous_group.py  discrete_group.py  group_equivariant.py  opt_equivariant.py
equiadapt/images/canonicalization_networks/: __init__.py  custom_equivariant_networks.py  custom_group_equivariant_layers.py  custom_nonequivariant_networks.py  escnn_networks.py
equiadapt/nbody/: __init__.py
equiadapt/nbody/canonicalization/: continuous_group.py  euclidean_group.py
equiadapt/nbody/canonicalization_networks/: __init__.py  custom_equivariant_networks.py  custom_group_equivariant_layers.py  equivariant_layers.py  euclideangraph_base_models.py  euclideangraph_model.py  gcl.py  image_model.py  image_networks.py  pointcloud_classification_models.py  pointcloud_networks.py  pointcloud_partseg_models.py  resnet.py  set_base_models.py  set_model.py  vn_layers.py  wider_resnet_network.py
equiadapt/pointcloud/: __init__.py
equiadapt/pointcloud/canonicalization/: __init__.py  continuous_group.py
equiadapt/pointcloud/canonicalization_networks/: __init__.py  equivariant_networks.py  vector_neuron_layers.py
examples/images/classification/: README.md  common.py  evaluate_robustness.py  hyperparams_sweep_mila.sh  inference_utils.py  model.py  model_utils.py  train.py  train_utils.py
examples/images/classification/configs/: default.yaml  group_equivariant.yaml  wandb_sweep.yaml
examples/images/classification/prepare/: __init__.py  celeba_data.py  cifar_data.py  flowers102_data.py  imagenet_data.py  rotated_mnist_data.py  stl10_data.py
examples/images/common/: __init__.py  utils.py
examples/images/segmentation/: README.md  inference_utils.py  model.py  model_utils.py  train.py  train_utils.py
examples/images/segmentation/configs/: wandb_sweep.yaml
examples/images/segmentation/prepare/: __init__.py  coco_data.py  vision_transforms.py
examples/nbody/: README.md  model.py  model_utils.py  train.py  train_utils.py
examples/nbody/configs/: default.yaml
examples/nbody/configs/canonicalization/: vndeepsets.yaml
examples/nbody/configs/checkpoint/: default.yaml
examples/nbody/configs/dataset/: default.yaml
examples/nbody/configs/experiment/: default.yaml
examples/nbody/networks/: euclideangraph_base_models.py  gcl.py
examples/nbody/prepare/: nbody_data.py
examples/pointcloud/: README.md
examples/pointcloud/classification/: README.md  model.py  model_utils.py  prepare.py  train.py  train_utils.py
examples/pointcloud/common/: networks.py  utils.py
examples/pointcloud/part_segmentation/: README.md  model.py  model_utils.py  prepare.py  train.py  train_utils.py
tests/: conftest.py  test_utils.py
tests/common/: test_utils.py
tests/images/canonicalization/: test_continuous_group.py  test_discrete_group.py
tutorials/images/: classification_group_equivariant_canonicalization.ipynb  group_equivariant.ipynb  instance_segmentation_group_equivariant_canonicalization.ipynb  test_continuous_canonicalization.ipynb  test_discrete_canonicalization.ipynb  understanding_discrete_canonicalization.ipynb
tutorials/nbody/: nbody.ipynb
(+42 files in other folders)
